# azure-functions-cookbook-python

./: .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Makefile  PRD.md  README.md  items.db  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-smoke.yml  ci-test.yml  docs.yml  release.yml
.sisyphus/: ralph-loop.local.md
docs/: api.md  architecture.md  changelog.md  configuration.md  contributing.md  development.md  faq.md  getting-started.md  index.md  installation.md  recipes.md  roadmap.md  security.md  troubleshooting.md  usage.md
docs/concepts/: deployment-patterns.md  durable-functions-overview.md  iac-snippets.md  identity-based-connections.md  python-v2-programming-model.md  triggers-and-bindings-overview.md
docs/foundations/: delivery-guarantees.md  execution-model.md  hosting-and-scale.md  pattern-chooser.md  triggers-bindings-overview.md
docs/guides/: deployment-patterns.md  iac-snippets.md  identity-based-connections.md  local-run-and-direct-invoke.md  scaffold-quick-start.md  testing-patterns.md
docs/patterns/: index.md
docs/patterns/ai-and-agents/: ai-image-generation.md  durable-ai-pipeline.md  embedding-vector-search.md  index.md  langgraph-agent.md  langgraph-rag-agent.md  mcp-server-example.md  openai-direct-chat.md  (+2 more)
docs/recipes/: blueprint-modular-app.md  db-input-output.md  durable-entity-counter.md  durable-retry-pattern.md  durable-unit-testing.md  eventhub-consumer.md  hello-http-minimal.md  http-auth-levels.md  index.md  langgraph-agent.md  mcp-server-example.md  output-binding-vs-sdk.md  queue-consumer.md  retry-and-idempotency.md  scaffold-quick-start.md  servicebus-worker.md  webhook-github.md
docs/reference/: blob-storage.md  cosmos-db.md  durable.md  event-grid.md  event-hub.md  http.md  index.md  queue-storage.md  service-bus.md  service-matrix.md  signalr.md  sql.md  timer.md
examples/: README.md
examples/ai-and-agents/ai_image_generation/: README.md  function_app.py  local.settings.json.example  pyproject.toml  requirements.txt
examples/ai-and-agents/durable_ai_pipeline/: README.md  function_app.py  local.settings.json.example  pyproject.toml  requirements.txt
examples/ai-and-agents/langgraph_rag_agent/: README.md  function_app.py  local.settings.json.example  main.bicep  main.tf  pyproject.toml  requirements.txt
examples/async-apis-and-jobs/queue_backed_job/: README.md  function_app.py  local.settings.json.example  main.bicep  main.tf  pyproject.toml  requirements.txt
examples/blob-and-file-triggers/blob_thumbnail_generator/: README.md  pyproject.toml
examples/blob-and-file-triggers/blob_upload_processor/: README.md  main.bicep  main.tf  pyproject.toml
examples/blob-and-file-triggers/blob_upload_processor/app/services/: blob_service.py
examples/blob/blob_eventgrid_trigger/: README.md  function_app.py  pyproject.toml
examples/blob/blob_eventgrid_trigger/app/functions/: blob_eventgrid.py
examples/blob/blob_eventgrid_trigger/app/services/: eventgrid_service.py
examples/durable/durable_human_interaction/: README.md  function_app.py  pyproject.toml
examples/durable/durable_human_interaction/app/functions/: orchestration.py
examples/durable/durable_human_interaction/app/services/: approval_service.py
examples/durable/durable_human_interaction/tests/: test_approval.py
examples/local_run_and_direct_invoke/: README.md  function_app.py  invoke.py  pyproject.toml
examples/messaging-and-pubsub/claim_check_pattern/: README.md  function_app.py  pyproject.toml
examples/reliability/outbox_pattern/: README.md  function_app.py  local.settings.json.example  main.bicep  main.tf  pyproject.toml  requirements.txt
examples/runtime-and-ops/blueprint_modular_app/: README.md  main.bicep  main.tf  pyproject.toml
examples/runtime-and-ops/blueprint_modular_app/app/services/: user_service.py
examples/runtime-and-ops/blueprint_modular_app/tests/: test_health.py  test_users.py
examples/runtime-and-ops/output_binding_vs_sdk/: README.md  function_app.py  main.bicep  main.tf  pyproject.toml
examples/runtime-and-ops/output_binding_vs_sdk/app/functions/: sdk_route.py
examples/runtime-and-ops/output_binding_vs_sdk/app/services/: payload_service.py
examples/runtime-and-ops/output_binding_vs_sdk/tests/: test_payload.py
examples/scheduled-and-background/durable_timer_reminder/: README.md  function_app.py  pyproject.toml
examples/security-and-tenancy/managed_identity_servicebus/: README.md  function_app.py  local.settings.json.example  main.bicep  main.tf  pyproject.toml
examples/security-and-tenancy/managed_identity_servicebus/app/core/: logging.py
examples/security-and-tenancy/managed_identity_servicebus/tests/: test_sb_identity.py
examples/security-and-tenancy/managed_identity_storage/: README.md  local.settings.json.example  main.bicep  main.tf  pyproject.toml
examples/security-and-tenancy/managed_identity_storage/app/core/: logging.py
examples/security-and-tenancy/managed_identity_storage/app/services/: storage_identity_service.py
examples/security-and-tenancy/managed_identity_storage/tests/: test_queue_identity.py
examples/security-and-tenancy/tenant_isolation/: README.md  function_app.py  local.settings.json.example  main.bicep  main.tf  pyproject.toml
recipes/: README.md  _template.md  blob-eventgrid-trigger.md  blob-upload-processor.md  change-feed-processor.md  concurrency-tuning.md  durable-determinism-gotchas.md  durable-fan-out-fan-in.md  durable-hello-sequence.md  durable-human-interaction.md  github-webhook.md  host-json-tuning.md  http-api-basic.md  http-api-openapi.md  http-routing-query-body.md  local-run-and-direct-invoke.md  managed-identity-servicebus.md  managed-identity-storage.md  queue-producer.md  queue-worker.md  timer-cron-job.md  timer-job.md
src/azure_functions_python_cookbook/: __init__.py
tests/: test_examples.py  test_public_api.py  test_version.py
tests/e2e/: conftest.py  test_blob_examples.py  test_durable_examples.py  test_http_examples.py  test_queue_examples.py  test_smoke_examples.py
(+514 files in other folders)
