[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "claim_check_pattern"
version = "0.1.0"
description = "Claim Check Pattern example for Azure Functions."
requires-python = ">=3.10"
dependencies = [
  "azure-functions>=1.21.3",
  "azure-functions-logging>=0.5.0",
  "azure-functions-openapi>=0.12.1",
  "azure-functions-validation>=0.7.1",
  "azure-storage-blob>=12.25.1",
  "pydantic>=2.11.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
