[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "outbox_pattern"
version = "0.1.0"
description = "Outbox Pattern example for Azure Functions."
requires-python = ">=3.10"
dependencies = [
  "azure-functions",
  "azure-cosmos>=4.5.1",
  "azure-functions-db",
  "azure-functions-logging",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
