[project]
name = "managed-identity-servicebus"
version = "0.1.0"
description = "Use identity-based Service Bus connections in Azure Functions"
requires-python = ">=3.10"
dependencies = ["azure-functions"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["."]
